backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: backend
  name: durian-app
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: durian
    spec:
      containers:
        - name: durian-app
          image: owl8105/durian:1.0.0
          ports:
            - name: app-port
              containerPort: 8080
  selector:
    matchLabels:
      app: durian
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: backend
  name: mysql-app
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql-app
          image: mysql:5.7
          ports:
            - name: mysql-port
              containerPort: 3306
  selector:
    matchLabels:
      app: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: backend
  name: redis-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis-app
          image: owl8105/rd3-redis
          ports:
            - name: redis-port
              containerPort: 6379
          volumeMounts:
            - mountPath: /data
              name: durian-pvc
      volumes:
        - name: durian-pvc
          persistentVolumeClaim:
            claimName: my-pvc
  selector:
    matchLabels:
      app: redis
